--- a/public/index.htm
+++ b/public/index.htm
@@ -22,24 +22,30 @@
       <div class="container images">
          <div class="row">
             <div class="col-md-6">
-               <div class="col-md-12" style="min-height: 135px;">
+               <div class="col-md-12 images-header">
                   <h2>Source</h2>
                   <div class="btn-group row">
-                     <div class="col-md-2">
-                        <label class="btn btn-primary">Add<input class="input-file" id="my-file" type="file" style="display: none;"></label>
+                     <div class="col-md-6">
+                        <label class="btn btn-primary">Add Image<input class="input-file" id="my-file" type="file" style="display: none;"></label>
                      </div>
-                     <div class="col-md-7">
-                        <input type="color" class="js-color-picker  color-picker">
-                        <input type="range" class="js-line-range" min="1" max="72" value="1">
-                        <label class="js-range-value">1</label>Pxs
-                     </div>
-                     <div class="col-md-2"><button onclick="grabCut()" class="btn btn-success" type="button">Extract foreg.</button></div>
+                     <div class="col-md-6"><button onclick="grabCut()" class="btn btn-success" type="button">Extract foreground</button></div>
+                  </div>
+                  <div class="col-md-12 btn-group-item">
+                     <input type="color" class="js-color-picker  color-picker">
+                     <input type="range" class="js-line-range" min="1" max="72" value="1">
+                     <label class="js-range-value">7</label>Pxs
+                  </div>
+                  <div class="col-md-12 btn-group-item">
+                     <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="square-mode">
+                        <label class="form-check-label">Square mode</label>
+                      </div>
                   </div>
                </div>
-               <canvas id="canvas1" class="js-paint paint-canvas" width="480" height="480"></canvas>
+               <canvas id="canvas1" width="480" height="480"></canvas>
             </div>
             <div class="col-md-6">
-               <div class="col-md-12" style="min-height: 135px;">
+               <div class="col-md-12 images-header">
                   <h2>Result</h2>
                   <div class="btn-group row">
                      <div class="col-md-2">
@@ -55,8 +61,9 @@
          <script src="lib/jquery/jquery-3.2.0.min.js"></script>
          <script src="lib/bootstrap/js/bootstrap.min.js"></script>
          <script async="" defer="" src="lib/cv.js"></script>
+         <script defer="" src="doodles.js"></script>
+         <script defer="" src="square.js"></script>
          <script defer="" src="index.js"></script>
-         <script defer="" src="draw.js"></script>
       </div>
    </body>
 </html>
